# favvocoaster

./: .env.example  .favvocoaster_cache.json  .gitignore  .tidal_session.json  README.md  local_setup.sh  main.py  pyproject.toml
deploy/: README.md  build.sh  main.tf
favvocoaster/: __init__.py  base_client.py  bootstrap_token.py  client_factory.py  config.py  http_logging.py  lambda_handler.py  main.py  models.py  rules.py  spotify_client.py  tidal_client.py  watcher.py
